Fixed overflowY

--- a/style.scss
+++ b/style.scss
@@ -29,6 +29,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow-y: hidden;
 
   &::before,
   &::after {
